# oms_agent

./: README.md  requirements.txt
agents/: db_api.py  main_api.py  pyproject.toml  requirements.txt
agents/resultados/llama3.1_8b/: results_llama3.1_8b.json
agents/resultados/qwen2.5_7b/: results_qwen2.5_7b.json
agents/results/qwen2.5_14b/: results_qwen2.5_14b.json
agents/src/: crew.py
agents/src/config/: agents.yaml  tasks.yaml
agents/src/tools/: custom_tool.py
agents/tests/: tests.json
resultados/gemma4_4b/: results_gemma4_4b.json
resultados/qwen2.5_7b/: results_qwen2.5_7b.json
resultados/qwen3.6_35b/: respostas.json
single_agent/: db_api_agent.py  main_api_agent.py
single_agent/resultados/gemma4_4b/: results_gemma4_4b.json
single_agent/resultados/llama3.1_8b/: results_llama31_8b.json
single_agent/results/llama3.1_8b/: results_llama31_8b.json
single_agent/results/qwen2.5_14b/: results_qwen25_14b.json
single_agent/results/qwen2.5_7b/: results_qwen2.5_7b.json
single_agent/results/qwen3.6_35b/: results_qwen36_35b.json
single_agent/src/: crew_agent.py
single_agent/src/config/: agent.yaml  tasks_agent_local.yaml  tasks_agent_server.yaml
single_agent/src/tools/: tools_agent.py
single_agent/tests/: tests.json
