[project]
name = "horus_agents"
version = "0.1.0"
description = "horus_agents using crewAI"
authors = [{ name = "Bernardo Henriques" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2"
]

[project.scripts]
horus_agents = "horus_agents.main:run"
run_crew = "horus_agents.main:run"
train = "horus_agents.main:train"
replay = "horus_agents.main:replay"
test = "horus_agents.main:test"
run_with_trigger = "horus_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
